--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
   <div class="overlay"></div>
 
+
+<nav class="top-nav">
+  <a href="SignIn.html" class="signin-link">SignIn</a>
+</nav>
+
+
   <main class="hero">
     <header>
       <h1 class="restaurant-name">Golden Lotus</h1>
