--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 <body>
   <div class="overlay"></div>
 
-
-<nav class="top-nav">
-  <a href="SignIn.html" class="signin-link">SignIn</a>
-</nav>
-
+  <!-- Navigation -->
+  <nav class="top-nav">
+    <a href="SignIn.html" class="signin-link">Sign In</a>
+  </nav>
 
   <main class="hero">
     <header>
-      <h1 class="restaurant-name">Golden Lotus</h1>
+      <h1 class="restaurant-name">GOLDEN LOTUS</h1>
       <p class="tagline">Authentieke Chinese gerechten, vers bereid.</p>
     </header>
   </main>
 
-  <!-- You can still keep script.js if you want to add interactions later -->
   <script src="script.js"></script>
 </body>
 </html>
+
