--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <div class="overlay"></div>
 
   <!-- Navigation -->
-  <nav class="top-nav">
-    <a href="SignIn.html" class="signin-link">Sign In</a>
-  </nav>
+<nav class="top-nav">
+  <a href="SignIn.html" class="nav-link">Sign In</a>
+  <a href="NewAccount.html" class="nav-link highlight">Create Account</a>
+</nav>
+
 
   <main class="hero">
     <header>
