--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navigation -->
 <nav class="top-nav">
   <a href="SignIn.html" class="nav-link">Sign In</a>
-  <a href="NewAccount.html" class="nav-link highlight">Create Account</a>
+  <a href="CreateAccount.html" class="nav-link highlight">Create Account</a>
 </nav>
 
 
