--- a/SignIn.html
+++ b/SignIn.html
@@ -11,19 +11,50 @@
   <main class="signin-container">
     <h1>Sign In</h1>
 
-    <form class="signin-form">
+    <form class="signin-form" id="signinForm">
+      
       <label>
         Email
-        <input type="email" required>
+        <input type="email" id="email" required>
       </label>
 
       <label>
         Wachtwoord
-        <input type="password" required>
+        <input type="password" id="password" required>
       </label>
 
       <button type="submit">Sign In</button>
+
+      <p id="formMessage"></p>
     </form>
   </main>
+
+  <script>
+    document.getElementById("signinForm").addEventListener("submit", function(event) {
+      event.preventDefault(); // prevent page reload
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const message = document.getElementById("formMessage");
+
+      if (email === "" || password === "") {
+        message.textContent = "Vul alle velden in.";
+        message.style.color = "orange";
+        return;
+      }
+
+      // ✅ For now this just simulates a real login
+      message.textContent = "Succesvol ingelogd!";
+      message.style.color = "lightgreen";
+
+      console.log("Email:", email);
+      console.log("Password:", password);
+
+      // Optional redirect after login:
+      // window.location.href = "index.html";
+    });
+  </script>
+
 </body>
 </html>
+
