--- a/SignIn.html
+++ b/SignIn.html
@@ -28,7 +28,8 @@
     </form>
   </main>
 
-  <!-- ✅ make sure this script tag is here -->
+  <!-- load the JS file -->
   <script src="script.js"></script>
 </body>
 </html>
+
