--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="overlay"></div>
 
   <!-- Navigation -->
-<<nav class="top-nav" id="authNav">
+<nav class="top-nav">
   <a href="SignIn.html" class="nav-link">Sign In</a>
   <a href="CreateAccount.html" class="nav-link highlight">Create Account</a>
 </nav>
